@@ -1,5 +1,8 @@
 2008-12-20  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/xlib-util.lisp (get-color): Allocate colors only once -> fix
+	a segfault with clisp/new-clx.
+
 	* src/clfswm.lisp (handle-motion-notify): Add a	needed window
 	argument.
 
